partman-base (118) UNRELEASED; urgency=low

  * init.d/parted: convert /dev/mdX in output of parted_devices to /dev/md/X
    (if that exists) as the latter form is preferred in partman.
    See #476894 and #475479 for reference.

 -- Frans Pop <fjp@debian.org>  Sun, 20 Apr 2008 02:53:47 +0200

partman-base (117) unstable; urgency=low

  [ Colin Watson ]
  * Don't emit confusing log messages if partman-lvm or partman-crypto are
    already loaded.
  * Support preseeding questions asked through ask_user using the name of
    the plugin responsible for the answer you want (e.g.
    partman-auto/init_automatically_partition=biggest_free).
  * Fix parted_devices check for floppy devices, broken by me in
    partman-base 100 (sorry!).
  * Allow disable_swap to take a device argument, in which case it only
    disables swap on that device rather than on all devices.
  * Only disable swap on devices that are being changed.

  [ Guido Guenther ]
  * Add multipath support (closes: #442236):
    - recognize and display multipath devices
    - skip physical disks that are part of a multipath device

  [ Frans Pop ]
  * Drop the compatibility symlink for definitions.sh; all other partman
    components have now been uploaded.
  * Change "initialise" to American English spelling (-ize).

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Arabic (ar.po) by Ossama M. Khayat
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Indonesian (id.po) by Arief S Fitrianto
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Changwoo Ryu
  * Dutch (nl.po) by Frans Pop
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)