@@ -336,6 +336,18 @@ Type: text
 # :sl5:
 _Description: DASD %s (%s), partition #%s
 
+Template: partman/text/virtual_disk
+Type: text
+# eg. Virtual disk 1 (xvda)
+# :sl4:
+_Description: Virtual disk %s (%s)
+
+Template: partman/text/virtual_partition
+Type: text
+# eg. Virtual disk 1, partition #1 (xvda1)
+# :sl4:
+_Description: Virtual disk %s, partition #%s (%s)
+
 Template: partman/text/cancel_menu
 Type: text
 # :sl1:
