@@ -3,8 +3,10 @@ partman-base (118) UNRELEASED; urgency=low
   * init.d/parted: convert /dev/mdX in output of parted_devices to /dev/md/X
     (if that exists) as the latter form is preferred in partman.
     See #476894 and #475479 for reference.
+  * Apply patch by Ian Campbell and Ferenc Wagner to improve display of Xen
+    virtual disks in partman. With thanks to both. Closes: #456784.
 
- -- Frans Pop <fjp@debian.org>  Sun, 20 Apr 2008 02:53:47 +0200
+ -- Frans Pop <fjp@debian.org>  Tue, 22 Apr 2008 21:25:29 +0200
 
 partman-base (117) unstable; urgency=low
 
